<resources>
    <string name="app_name">PKLApp</string>
    <string name="form_legalisasi_online">Form Legalisasi Online</string>
    <string name="pkl_app">PKL APP</string>
    <string name="pesan_legalisir">Pesan Legalisir</string>
    <string name="belum_upload_upload_disini">Belum upload? Upload disini</string>
    <string name="alamat"></string>
    <string name="no_rekening">000501001641300</string>
    <string name="berkas_null">Data Kosong</string>
    <string name="info_legalisir">Harap melengkapi berkas yang ada, agar Legalisir dapat segera diproses. Pastikan berkas yang di-upload sesuai. upload file dengan format PDF. Notifikasi verifikasi dapat dilihat melalui E-Mail yang telah terdaftar</string>
    <string name="proses1">Berkas Belum Diproses</string>
    <string name="proses2">Berkas Sedang Diproses</string>
    <string name="proses3">Berkas Terkirim</string>
    <string name="resi">Cek Nomor Resi Pengiriman</string>
    <string name="belum_upload">Berkas belum di upload</string>
    <string name="ditolak">Berkas Ditolak</string>
    <string name="diterima">Berkas Diterima</string>

    <string-array name="jml">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="jasa_kirim">
        <item>jne</item>
        <item>tiki</item>
    </string-array>
    <string name="title_activity_tes_awal">tesAwal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_m_legalisir">mLegalisir</string>
    <string name="fakultas_ekonomi_bisnis"><![CDATA[FAKULTAS EKONOMI & BISNIS]]></string>
</resources>
