<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkl_app"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundbutton"
        android:id="@+id/legalisir"
        android:text="@string/pesan_legalisir"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:contextClickable="true"
        android:gravity="center"
        android:text="@string/belum_upload_upload_disini"
        android:textColor="@android:color/background_dark" />
</LinearLayout>