<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadBuktiActivity"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        >
    </include>
    <LinearLayout
        android:id="@+id/vtotal"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/light_grey"
        android:orientation="horizontal"
        android:padding="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:text="Total Pembayaran"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:text="Rp. 0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vnorek"
        android:layout_below="@id/vtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TRANSFER SESUAI TOTAL PEMBAYARAN PADA NOMER REKENING BERIKUT"
            android:textAlignment="center"
            android:textSize="12dp"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_biru"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_rekening"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="FAKULTAS EKONOMI &amp; BISNIS "
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="A/n  Candra Fajri Ananda"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Setelah Transfer Selesai, Harap Upload Gambar Bukti Transfer"
            android:textAlignment="center"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:padding="10dp"/>
        <Button
            android:id="@+id/buttonSelect"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="Select"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/b_grey"/>
        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="Upload"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/b_grey"/>
        <TextView
            android:id="@+id/statusBTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/belum_upload"
            android:textColor="@color/red"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_grey"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:padding="20dp"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Status "
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/statusPengiriman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/proses1"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textColor="@color/red"/>
    </RelativeLayout>

</RelativeLayout>